LPS-42356 Uploaded logo displayed correctly on Portal Settings page
* This problem is only present in firefox, so the fix is firefox specific
* Previously, if a large or long image was uploaded as the new logo on the
   portal settings page, it could overflow its column and overlap the
   save/cancel buttons in the sidebar on the right. It could also cause
   the entire page to be resized such that the width of the page was wider
   than the browser window
   * This is due to a larger issue with fieldset elements in firefox --
     they are allowed to expand to the size of their children
* Now, the logo does not overflow its column and the page is not resized
  to be larger than the window width if there is a large image uploaded

--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/META-INF/resources/css/main.scss
@@ -24,3 +24,9 @@
 		margin-left: 20px;
 	}
 }
+
+.firefox {
+	.portlet-users-admin .input-container, .select-logo-container {
+		display: table-cell;
+	}
+}
